--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(GetRawData)
 export(GetSiteName)
 export(OpenDatabaseConnection)
 export(SaveDataToCsv)
+export(SensorQcSummary)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
