Created and tested QcCompleteness and QcCompletenessPlot functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(CloseDatabaseConnection)
 export(GetRawData)
 export(GetSiteName)
 export(OpenDatabaseConnection)
+export(QcCompleteness)
+export(QcCompletenessPlot)
 export(SaveDataToCsv)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
