--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(QcWqPlots)
 export(QcWqSanity)
 export(QcWqStats)
 export(SaveDataToCsv)
+export(SensorQcHeatmap)
 export(SensorQcSummary)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
