New exports for water quality functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,12 @@ export(GetSiteName)
 export(OpenDatabaseConnection)
 export(QcCompleteness)
 export(QcCompletenessPlot)
+export(QcWqCleaned)
+export(QcWqFlags)
+export(QcWqMedian)
+export(QcWqPlots)
+export(QcWqSanity)
+export(QcWqStats)
 export(SaveDataToCsv)
 export(SensorQcSummary)
 importFrom(magrittr,"%<>%")
