Updated WQ test functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,12 @@ export(QcCompletenessPlot)
 export(QcWqCleaned)
 export(QcWqFlags)
 export(QcWqMedian)
-export(QcWqPlots)
+export(QcWqPlotDOPct)
+export(QcWqPlotDOmgL)
+export(QcWqPlotGrid)
+export(QcWqPlotPH)
+export(QcWqPlotSpCond)
+export(QcWqPlotTemp)
 export(QcWqSanity)
 export(QcWqStats)
 export(SaveDataToCsv)
