Fix and export expect_dataframe_equal()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,5 +21,6 @@ export(QcWqStats)
 export(SaveDataToCsv)
 export(SensorQcHeatmap)
 export(SensorQcSummary)
+export(expect_dataframe_equal)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
