New function names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,5 +23,9 @@ export(SaveDataToCsv)
 export(SensorQcHeatmap)
 export(SensorQcSummary)
 export(expect_dataframe_equal)
+export(qcMissingSensors)
+export(qcSensorDates)
+export(qcSensorDownload)
+export(qcSensorProblems)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
