Added roxygen skeletons, standardized function names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,30 +2,48 @@
 
 export("%>%")
 export(CloseDatabaseConnection)
+export(FlowCategoriesAnnualHeatMap)
+export(FlowCategoriesAnnualPlot)
+export(FlowCategoriesContinuous)
+export(FlowCategoriesDiscontinuous)
+export(FlowCategoriesMap)
+export(FlowCategoriesThreeYearHeatMap)
+export(FlowCategoriesThreeYearPlot)
 export(FormatPlot)
 export(GetRawData)
 export(GetSiteName)
 export(OpenDatabaseConnection)
-export(QcCompleteness)
-export(QcCompletenessPlot)
-export(QcWqCleaned)
-export(QcWqFlags)
-export(QcWqMedian)
-export(QcWqPlotDOPct)
-export(QcWqPlotDOmgL)
-export(QcWqPlotGrid)
-export(QcWqPlotPH)
-export(QcWqPlotSpCond)
-export(QcWqPlotTemp)
-export(QcWqSanity)
-export(QcWqStats)
 export(SaveDataToCsv)
-export(SensorQcHeatmap)
-export(SensorQcSummary)
+export(SpringDischarge)
+export(VolumetricMedian)
+export(WqMedian)
+export(WqPlotDOPct)
+export(WqPlotDOmgL)
+export(WqPlotGrid)
+export(WqPlotPH)
+export(WqPlotSpCond)
+export(WqPlotTemp)
+export(WqStats)
 export(expect_dataframe_equal)
+export(qcCompleteness)
+export(qcCompletenessPlot)
+export(qcContinuousLength)
+export(qcDPLCheck)
 export(qcMissingSensors)
 export(qcSensorDates)
-export(qcSensorDownload)
+export(qcSensorDownloads)
+export(qcSensorHeatmap)
 export(qcSensorProblems)
+export(qcSensorSummary)
+export(qcSensorsNoData)
+export(qcSpringDryDischarge)
+export(qcSpringNotDryNoDischarge)
+export(qcSpringNotDryNoSpringbrook)
+export(qcVolumetricFillEvents)
+export(qcVolumetricMissing)
+export(qcVolumetricTimes)
+export(qcWqFlags)
+export(qcWqLong)
+export(qcWqSanity)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
