Created wildlife qc file, added new functions to general and disturbance qc files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(WqPlotDOmgL)
 export(WqPlotGrid)
 export(WqPlotPH)
 export(WqPlotSpCond)
+export(WqPlotSpCondmS)
 export(WqPlotTemp)
 export(WqStats)
 export(expect_dataframe_equal)
@@ -39,6 +40,7 @@ export(qcSensorsNoData)
 export(qcSpringDryDischarge)
 export(qcSpringNotDryNoDischarge)
 export(qcSpringNotDryNoSpringbrook)
+export(qcSpringTypeDiscrepancies)
 export(qcVolumetricFillEvents)
 export(qcVolumetricMissing)
 export(qcVolumetricTimes)
