Added new functions and fixed broken functions in discharge-qc, disturbance-qc, vegetation-qc, and wildlife-qc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(GetSiteName)
 export(OpenDatabaseConnection)
 export(SaveDataToCsv)
 export(SpringDischarge)
+export(SpringbrookLengthsAnnualPlot)
+export(SpringbrookLengthsThreeYearPlot)
 export(VolumetricMedian)
 export(WqMedian)
 export(WqPlotDOPct)
@@ -30,6 +32,7 @@ export(qcCompleteness)
 export(qcCompletenessPlot)
 export(qcContinuousLength)
 export(qcDPLCheck)
+export(qcDischargeMissing)
 export(qcMissingSensors)
 export(qcSensorDates)
 export(qcSensorDownloads)
