Added functions for wildlife and ungulate qc and data visualization

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,11 +12,14 @@ export(FlowCategoriesThreeYearPlot)
 export(FormatPlot)
 export(GetRawData)
 export(GetSiteName)
+export(InvasivePlantsMap)
+export(LivestockMap)
 export(OpenDatabaseConnection)
 export(SaveDataToCsv)
 export(SpringDischarge)
 export(SpringbrookLengthsAnnualPlot)
 export(SpringbrookLengthsThreeYearPlot)
+export(UngulatesMap)
 export(VolumetricMedian)
 export(WqMedian)
 export(WqPlotDOPct)
@@ -44,6 +47,7 @@ export(qcSpringDryDischarge)
 export(qcSpringNotDryNoDischarge)
 export(qcSpringNotDryNoSpringbrook)
 export(qcSpringTypeDiscrepancies)
+export(qcVisitDate)
 export(qcVolumetricFillEvents)
 export(qcVolumetricMissing)
 export(qcVolumetricTimes)
