Updated namespace with new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(qcFlowModNoHuman)
 export(qcLifeformPresentNoRank)
 export(qcLifeformRankCheck)
 export(qcMissingSensors)
+export(qcNotSampled)
 export(qcOverallDisturbance)
 export(qcSensorDates)
 export(qcSensorDownloads)
