Minor typo corrections

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,7 @@ export(HumanUsePlot)
 export(InvasivePlants)
 export(InvasivePlantsMap)
 export(LifeformsPerSpringPlot)
-export(LifeformsPresencePlot)
+export(LifeformsPresence)
 export(LivestockMap)
 export(LivestockObservations)
 export(LivestockPlot)
@@ -55,6 +55,7 @@ export(qcFlowModNoHuman)
 export(qcLifeformPresentNoRank)
 export(qcLifeformRankCheck)
 export(qcMissingSensors)
+export(qcNoVegLifeformsPresent)
 export(qcNotSampled)
 export(qcOverallDisturbance)
 export(qcSensorDates)
