Fixed completeness and completeness plot functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,7 +70,7 @@ export(qcSpringNotDryNoSpringbrook)
 export(qcSpringTypeDiscrepancies)
 export(qcVegPresentNoLifeforms)
 export(qcVisitDate)
-export(qcVisitDatePlots)
+export(qcVisitDateTimelines)
 export(qcVolumetricFillEvents)
 export(qcVolumetricMissing)
 export(qcVolumetricTimes)
