Minor edits to discharge summary function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,9 +64,10 @@ export(qcSensorHeatmap)
 export(qcSensorProblems)
 export(qcSensorSummary)
 export(qcSensorsNoData)
-export(qcSpringDryDischarge)
+export(qcSpringDryWater)
 export(qcSpringNotDryNoDischarge)
 export(qcSpringNotDryNoSpringbrook)
+export(qcSpringNotDryNoWater)
 export(qcSpringTypeDiscrepancies)
 export(qcVegPresentNoLifeforms)
 export(qcVisitDate)
