New function added to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(LifeformsPresence)
 export(LivestockMap)
 export(LivestockObservations)
 export(LivestockPlot)
+export(LocationMap)
 export(MostCommonLifeformsPlot)
 export(OpenDatabaseConnection)
 export(SaveDataToCsv)
