--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(LivestockPlot)
 export(LocationMap)
 export(MostCommonLifeformsPlot)
 export(OpenDatabaseConnection)
+export(ProcessTidbiT)
 export(SaveDataToCsv)
 export(SpringDischarge)
 export(SpringbrookLengthsAnnualPlot)
