Updates to namespace and function metadata

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,7 +65,8 @@ export(qcSensorDownloads)
 export(qcSensorHeatmap)
 export(qcSensorProblems)
 export(qcSensorSummary)
-export(qcSensorsNoData)
+export(qcSensorsNotDeployed)
+export(qcSensorsNotRecovered)
 export(qcSpringDryWater)
 export(qcSpringNotDryNoDischarge)
 export(qcSpringNotDryNoSpringbrook)
