Updates to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(qcFlowModDiscrepancies)
 export(qcFlowModNoHuman)
 export(qcLifeformPresentNoRank)
 export(qcLifeformRankCheck)
+export(qcLocalDOCheck)
 export(qcMissingSensors)
 export(qcNoVegLifeformsPresent)
 export(qcNotSampled)
@@ -67,11 +68,13 @@ export(qcSensorProblems)
 export(qcSensorSummary)
 export(qcSensorsNotDeployed)
 export(qcSensorsNotRecovered)
+export(qcSpCondStandardCheck)
 export(qcSpringDryWater)
 export(qcSpringNotDryNoDischarge)
 export(qcSpringNotDryNoSpringbrook)
 export(qcSpringNotDryNoWater)
 export(qcSpringTypeDiscrepancies)
+export(qcUnknownSensorIDs)
 export(qcVegPresentNoLifeforms)
 export(qcVisitDate)
 export(qcVisitDateTimelines)
