Updates and edits to test functions and documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(qcMissingSensors)
 export(qcNoVegLifeformsPresent)
 export(qcNotSampled)
 export(qcOverallDisturbance)
+export(qcRepeatVisits)
 export(qcSensorDates)
 export(qcSensorDownloads)
 export(qcSensorHeatmap)
