--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,10 @@ export(SpringbrookLengthsThreeYearPlot)
 export(UngulatesEvidence)
 export(UngulatesMap)
 export(VolumetricMedian)
+export(WqMapDO)
+export(WqMapPH)
+export(WqMapSpCond)
+export(WqMapTemp)
 export(WqMedian)
 export(WqPlotDOPct)
 export(WqPlotDOmgL)
