Plot formatting updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(WqPlotSpCond)
 export(WqPlotTemp)
 export(WqStats)
 export(expect_dataframe_equal)
+export(qcCalibrationTimes)
 export(qcCompleteness)
 export(qcCompletenessPlot)
 export(qcContinuousLength)
