AGOL import updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(WqPlotSpCondmS)
 export(WqPlotTemp)
 export(WqStats)
 export(expect_dataframe_equal)
+export(fetchAllRecords)
 export(qcCompleteness)
 export(qcCompletenessPlot)
 export(qcContinuousLength)
@@ -83,5 +84,6 @@ export(qcWildlifeObservedNoTypes)
 export(qcWqFlags)
 export(qcWqLong)
 export(qcWqSanity)
+export(unk_sensors)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
