--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,5 +25,17 @@ Imports:
     testthat,
     tidyr,
     magrittr,
-    leaflet
+    leaflet,
+    crosstalk,
+    ggpmisc,
+    gridExtra,
+    htmltools,
+    httr,
+    jsonlite,
+    rappdirs,
+    readr,
+    tibble,
+    tidytext,
+    utf8,
+    here
 RoxygenNote: 7.2.0
