Updated documentation. Updated tidbit.R file with the newest version of ProcessTidbiT code.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,8 @@ Imports:
     testthat,
     tidyr,
     magrittr,
-    leaflet,
+    leaflet
+Suggests:
     crosstalk,
     ggpmisc,
     gridExtra,
