--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(FlowModCount)
 export(FlowModPlot)
 export(FlowModStatus)
 export(FormatPlot)
+export(GetColSpec)
 export(GetRawData)
 export(GetSiteName)
 export(HumanUseMap)
