Fixed test functions to access data in test_data folder. Updated documentation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(LocationMap)
 export(MostCommonLifeformsPlot)
 export(OpenDatabaseConnection)
 export(ProcessTidbiT)
+export(ReadAndFilterData)
 export(SaveDataToCsv)
 export(SpringDischarge)
 export(SpringbrookLengthsAnnualPlot)
