Made FetchAGOLLayers an exported function of the package. Updated documentation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(ClearDesertSpringsCache)
 export(CloseDatabaseConnection)
 export(DisturbanceCount)
+export(FetchAGOLLayers)
 export(FlowCategoriesAnnualHeatMap)
 export(FlowCategoriesAnnualPlot)
 export(FlowCategoriesContinuous)
