Added disturbance formatting function, fixed typos

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ export(qcCompletenessPlot)
 export(qcContinuousLength)
 export(qcDPLCheck)
 export(qcDischargeMissing)
+export(qcDisturbanceFormatted)
 export(qcFlowModDiscrepancies)
 export(qcFlowModNoHuman)
 export(qcLifeformPresentNoRank)
