Fixed numerous test functions, fixed disturbance and general qc functions, added new qcFlowModTypes disturbance function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(qcDischargeMissing)
 export(qcDisturbanceFormatted)
 export(qcFlowModDiscrepancies)
 export(qcFlowModNoHuman)
+export(qcFlowModTypes)
 export(qcLifeformPresentNoRank)
 export(qcLifeformRankCheck)
 export(qcLocalDOCheck)
