Added qcFlowModFormatted function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,7 +64,8 @@ export(qcDPLCheck)
 export(qcDischargeMissing)
 export(qcDisturbanceFormatted)
 export(qcFlowModDiscrepancies)
-export(qcFlowModNoHuman)
+export(qcFlowModFormatted)
+export(qcFlowModNoHumanUse)
 export(qcFlowModTypes)
 export(qcLifeformPresentNoRank)
 export(qcLifeformRankCheck)
