Removed obsolete sensor qc function, made minor changes to other sensor qc functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,12 +70,11 @@ export(qcFlowModTypes)
 export(qcLifeformPresentNoRank)
 export(qcLifeformRankCheck)
 export(qcLocalDOCheck)
-export(qcMissingSensors)
 export(qcNoVegLifeformsPresent)
 export(qcNotSampled)
 export(qcOverallDisturbance)
 export(qcRepeatVisits)
-export(qcSensorDates)
+export(qcSensorDiscrepancies)
 export(qcSensorDownloads)
 export(qcSensorHeatmap)
 export(qcSensorProblems)
