--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,12 +67,14 @@ export(qcFlowModDiscrepancies)
 export(qcFlowModFormatted)
 export(qcFlowModNoHumanUse)
 export(qcFlowModTypes)
+export(qcInvasiveDuplicates)
 export(qcLifeformPresentNoRank)
 export(qcLifeformRankCheck)
 export(qcLocalDOCheck)
 export(qcNoVegLifeformsPresent)
 export(qcNotSampled)
 export(qcOverallDisturbance)
+export(qcPhotoDuplicates)
 export(qcRepeatVisits)
 export(qcSensorDiscrepancies)
 export(qcSensorDownloads)
@@ -88,6 +90,7 @@ export(qcSpringNotDryNoSpringbrook)
 export(qcSpringNotDryNoWater)
 export(qcSpringTypeDiscrepancies)
 export(qcUnknownSensorIDs)
+export(qcVegDuplicates)
 export(qcVegPresentNoLifeforms)
 export(qcVisitDateTimelines)
 export(qcVisitsByDate)
@@ -95,6 +98,7 @@ export(qcVisitsBySite)
 export(qcVolumetricFillEvents)
 export(qcVolumetricMissing)
 export(qcVolumetricTimes)
+export(qcWildlifeDuplicates)
 export(qcWildlifeObservedNoEvidence)
 export(qcWildlifeObservedNoTypes)
 export(qcWqFlags)
