New FlowCategoriesTotalPlot() and qcUniqueIDMissing() functions; removed temporary functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(FlowCategoriesDiscontinuous)
 export(FlowCategoriesMap)
 export(FlowCategoriesThreeYearHeatMap)
 export(FlowCategoriesThreeYearPlot)
+export(FlowCategoriesTotalPlot)
 export(FlowModCount)
 export(FlowModPlot)
 export(FlowModStatus)
@@ -89,6 +90,7 @@ export(qcSpringNotDryNoDischarge)
 export(qcSpringNotDryNoSpringbrook)
 export(qcSpringNotDryNoWater)
 export(qcSpringTypeDiscrepancies)
+export(qcUniqueIDMissing)
 export(qcUnknownSensorIDs)
 export(qcVegDuplicates)
 export(qcVegPresentNoLifeforms)
