--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ export(qcLocalDOCheck)
 export(qcNoVegLifeformsPresent)
 export(qcNotSampled)
 export(qcOverallDisturbance)
+export(qcPanelCheck)
 export(qcPhotoDuplicates)
 export(qcRepeatVisits)
 export(qcSensorDiscrepancies)
@@ -95,6 +96,7 @@ export(qcUnknownSensorIDs)
 export(qcVegDuplicates)
 export(qcVegPresentNoLifeforms)
 export(qcVisitDateTimelines)
+export(qcVisitTypeCheck)
 export(qcVisitsByDate)
 export(qcVisitsBySite)
 export(qcVolumetricFillEvents)
