Improved new calibration qc functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(qcCalibrationTimes)
 export(qcCompleteness)
 export(qcCompletenessPlot)
 export(qcContinuousLength)
+export(qcDOCalCheck)
 export(qcDPLCheck)
 export(qcDischargeMissing)
 export(qcDisturbanceFormatted)
@@ -75,6 +76,7 @@ export(qcLocalDOCheck)
 export(qcNoVegLifeformsPresent)
 export(qcNotSampled)
 export(qcOverallDisturbance)
+export(qcPHCalCheck)
 export(qcPanelCheck)
 export(qcPhotoDuplicates)
 export(qcRepeatVisits)
@@ -85,6 +87,7 @@ export(qcSensorProblems)
 export(qcSensorSummary)
 export(qcSensorsNotDeployed)
 export(qcSensorsNotRecovered)
+export(qcSpCondCalCheck)
 export(qcSpCondStandardCheck)
 export(qcSpringDryWater)
 export(qcSpringNotDryNoDischarge)
