--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,13 +25,20 @@ export(HumanUseObservations)
 export(HumanUsePlot)
 export(InvasivePlants)
 export(InvasivePlantsMap)
+export(LifeformCounts)
+export(LifeformsBySite)
+export(LifeformsByYear)
 export(LivestockMap)
 export(LivestockObservations)
 export(LivestockPlot)
 export(LoadDesertSprings)
 export(LocationMap)
 export(OpenDatabaseConnection)
+export(PlotLifeformCounts)
+export(PlotLifeformsByPark)
+export(PlotLifeformsByYear)
 export(ProcessTidbiT)
+export(ReadDataStore)
 export(SaveDataToCsv)
 export(SpringDischarge)
 export(SpringbrookLengthsAnnualPlot)
