--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ inst/doc
 *.Rproj
 *.Rhistory
 *.RData
+*.Rd
 tests/testthat/test_data/
 temp-test-csv/
 tests/testthat/test_data/
@@ -11,3 +12,4 @@ vignettes/
 test-space-DNP.R
 inventorydata/
 flowcondition.R
+man/
